crates/monochange_integration_tests/tests/snapshots/create_change_file__create_dry_run_stdout.snap
---
source: crates/monochange_integration_tests/tests/create_change_file.rs
expression: normalize_timestamps(&stdout)
---
• Would create changeset .changeset/[timestamp]-core.md · dry-run, nothing was written

---
core: minor
---

# Add helper
