crates/monochange_integration_tests/tests/snapshots/create_change_file__create_write_changeset_content.snap
---
source: crates/monochange_integration_tests/tests/create_change_file.rs
expression: content
---
---
core: minor
---

# Add helper
