crates/monochange_integration_tests/tests/snapshots/create_change_file__create_write_stdout.snap
---
source: crates/monochange_integration_tests/tests/create_change_file.rs
expression: normalize_timestamps(&stdout)
---
✔ Created changeset .changeset/[timestamp]-core.md
