crates/monochange_integration_tests/tests/snapshots/create_change_file__run_change_dry_run_stdout.snap
---
source: crates/monochange_integration_tests/tests/create_change_file.rs
expression: normalize_timestamps(&stdout)
---
would write change file .changeset/[timestamp]-core.md

---
core: minor
---

# Add helper
